fix(css): svg icon get cut off on safari

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -47,7 +47,7 @@ body {
 }
 
 .icon {
-    width: 1em;
+    width: 1.05em; // fixes svg icon get cut off on safari
     height: 1em;
     fill: currentColor;
     display: inline-block;
